tests/src/frontend/syntax/invalid/nested_module_alias_confusion.sk
module A;

const i: Int = 112;

module alias B = A;

module end;
